data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_189.wast
;; 10. **Loop branching with Unexpected Execution Reinitialization**:    - **Description**: Test loops where branching (`br`) unexpectedly causes loop execution to reinitialize from an incorrect point due to faulty label handling.    - **Constraint**: Ensuring that loop reinitialization only occurs at the start of the loop, target labels correctly resolve to the intended block start.

(assert_invalid
  (module
    (func $loop_branching_unexpected_reinit
      (result i32)
      (loop (result i32)
        (i32.const 1)
        (br 0)
        (i32.const 2)
      )
    )
  )
  "type mismatch"
)